# TCC_Lucas_Artur

./: .gitignore  README.md  extract_frame.py
cpp/: CMakeLists.txt
cpp/include/: camera_interface.hpp  example_header.hpp
cpp/src/: camera_interface.cpp  main.cpp
lib/: Flow.py  MOG.py  calibration.py  text_recognition.py
lib/calibration/: calibration.py  dubska.py  get_mask.py  homography.py  known_points_calibration.py  perspective.py  roi_maker.py  vp_detector.py
lib/calibration/car_calibration/: camera_intrinsics_from_vps.npz  compute_vp_w_from_homography.py  estimate_scale.py  estimate_vp_u.py  estimate_vp_v.py  vp_u.npy  vp_v.npy  vp_w.npy
lib/calibration/plate_calibration/: camera_calibration.npz  plate_calibration.py  plate_detector.py  point_cloud.npy
lib/detect_plate/: detect_plate_fast.py  detect_plate_setup.py  detect_plate_slow.py  export_model_to_onnx.py  requirements.txt
lib/detection/: background_generation.py  blob_detection.py  detection_api.py  foreground_detection.py  hsv_processing.py  mask_operations.py  morphological_operations.py  optical_flow.py  subtraction.py  tracking.py  utils.py
lib/intrinsic_calibration/: camera_calibration.npz  intrinsic_calibration.py
lib/output/: res.json
src/: batch_vp_eval.py  main.py
utils/: convert_mat_file.py  process_video.py  test_yolo_subtract.py  view_mat_file.py
